...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log Out"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logout_button"
        android:layout_marginTop="32dp"
        android:text="My Profile"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
...
        android:layout_below="@id/my_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
         />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text=""
...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="18sp" />

    <Button
        android:id="@+id/manage_reservation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/affiliation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="Manage Reservations"
        android:textSize="18sp" />

</RelativeLayout>


