...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- USCID/username EditText -->
    <EditText
        android:id="@+id/uscidEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/uscid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="220dp"/>

    <!-- Password EditText -->
    <EditText
...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uscidEditText"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/loginButton"
...
